name:                reify-core-examples
version:             0.1.0.0
synopsis:            Examples of core reification and Haskell-to-hardware compilation
author:              Conal Elliott
maintainer:          conal@conal.net
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable reify-optimize
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , shaped-types
                     , circat, reification-rules
  default-language:    Haskell2010
  ghc-options:
              -O2 -Wall
              -fplugin=ReificationRules.Plugin
              -dcore-lint -fexpose-all-unfoldings

--               -fsimpl-tick-factor=200

--               -fplugin-opt=ReificationRules.Plugin:trace
